2011-05-20 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.4

  * Entrada de lineas de albaran por concepto (sin vinculacion
    con el inventario)
  * Los filtros de fechas se guardan en cookies
    para que permanezcan tras la sesion
  * Filtrado por fechas en facturas
  * Primera version de informes
  * Ordenado de listados de proveedores

2011-05-13 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.3

  * Cambio estetico

2011-05-13 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.2

  * Eliminado plugin de will_paginate (se instala desde paquetes)

2011-05-13 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.1

  * Bug en cobro de venta (selección de impresión de ticket)
  * Impresión de etiquetas de productos
  * Ajustes de presentacion de formularios de facturas 
  * Bug en creacion de facturas desde albaranes con importe = 0

2011-05-05 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6

  * Bug en creacion de tabla de sesiones para instalaciones nuevas
  * Facturas de otros gastos
  * Entradas/salidas de caja
  * Arqueo y cierre de caja
  * Libro diario
  * Resumen de posicion global
  * Checkbox de imprimir factura
  * Campo ISBN por defecto para nueva linea de albaran
  * Credito acumulado por cliente (provision manual con generacion
    de entrada salida de caja, pero no de factura ni pago)
  * % de retorno por familia (configuracion)
  * Inclusion de direccion y codigo postal en cliente
  * Impresion de facturas de clientes
  * Inclusion de codigo postal y telefono en config general y uso
    en las facturas de clientes

2011-04-09 Santiago Ramos <sramos@sitiodistinto.net> Version 0.5

  * Controlador de Proveedores movido a seccion Productos
  * Controlador de Clientes movido a seccion TPV
  * Version de la app en la pagina web
  * Adaptaciones para empaquetado debian
  * Correccion de bug en borrado de facturas
  * Parametros de configuracion de la tienda en seccion Admin
  * Unificacion de metodos de calculo de precio bruto y